# Team_19

BedReader/: CMakeLists.txt  testfile
BedReader/src/: BEDreader.cpp  BEDreader.h  main.cpp
CommandLine/: CMakeLists.txt
CommandLine/src/: command_line.cpp  command_line.hpp  main.cpp  test_main.cpp
Fastareader/: CMakeLists.txt
Fastareader/src/: fastareader.cpp  fastareader.h  test_fasta.cpp
Matrice/: Matrice.h
